controle de rotas por botões

--- a/pages/step5.html
+++ b/pages/step5.html
@@ -2,7 +2,7 @@
  <div class="step5">
     <div class="containner-page">
       <h1>
-        Thank you!(5)
+        Thank you!
       </h1>
       <img src="./assets/images/icon-thank-you.svg" alt="">
       <p>
