--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
 
   <script src="./js/main.js" type="module" defer></script>
+  <script src="./js/elements.js" type="module" defer></script>
 </head>
 
 <body>
