update project mobile

--- a/pages/step1.html
+++ b/pages/step1.html
@@ -1,7 +1,7 @@
 <!-- Step 1 start -->
 
 <div class="step1">
-    <div class="containner-page">
+    <div class="container-page">
 
       <h2>
         Personal info
