--- a/pages/step3.html
+++ b/pages/step3.html
@@ -1,30 +1,63 @@
- <!-- Step 3 start -->
- <div class="step3">
-    <div class="containner-page">
+<!-- Step 3 start -->
+<div class="step3">
+  <div class="container-page">
 
-      <h1>
-        Pick add-ons (3)
-      </h1>
-      <p>
-        Add-ons help enhance your gaming experience.
-      </p>
-      <div class="services">
-        Online service
-        Access to multiplayer games
+    <h1>
+      Pick add-ons
+    </h1>
+    <p class="text">
+      Add-ons help enhance your gaming experience.
+    </p>
+    <div class="services">
+      <div>
+        <input type="checkbox">
+      </div>
+      <div>
+        <span>
+          Online service
+        </span>
+        <div>
+          Access to multiplayer games
+        </div>
+      </div>
+      <div>
         +$1/mo
       </div>
-      <div class="services">
-        Larger storage
-        Extra 1TB of cloud save
-        +$2/mo
-      </div>
-      <div class="services">
-        Customizable Profile
-        Custom theme on your profile
-        +$2/mo
-      </div>
-
     </div>
-   
+    <div class="services">
+      <div>
+        <input type="checkbox">
+      </div>
+      <div>
+        <span>
+          Larger storage
+        </span>
+        <div>
+          Extra 1TB of cloud save
+        </div>
+      </div>
+      <div>
+        +$2/mo
+      </div>
+    </div>
+    <div class="services">
+      <div>
+        <input type="checkbox">
+      </div>
+      <div>
+        <span>
+          Customizable Profile
+        </span>
+        <div>
+          Custom theme on your profile
+        </div>
+      </div>
+      <div>
+        +$2/mo
+      </div>
+    </div>
+
   </div>
-  <!-- Step 3 end -->
+
+</div>
+<!-- Step 3 end -->
