--- a/pages/step4.html
+++ b/pages/step4.html
@@ -1,8 +1,8 @@
  <!-- Step 4 start -->
  <div class="step4">
-    <div class="containner-page">
-      <h1>(4)</h1>
-      Finishing up
+    <div class="container-page">
+      <h1>Finishing up</h1>
+      
       Double-check everything looks OK before confirming.
 
       <!-- Dynamically add subscription and add-on selections here -->
@@ -12,12 +12,6 @@
 
 
     </div>
-    <a href="">
-      Go Back
-    </a>
-
-    <button>
-      Confirm
-    </button>
+  
   </div>
   <!-- Step 4 end -->
