--- a/pages/step5.html
+++ b/pages/step5.html
@@ -1,10 +1,10 @@
  <!-- Step 5 start -->
  <div class="step5">
-    <div class="containner-page">
-      <h1>
-        Thank you!
-      </h1>
+    <div class="container-page">
       <img src="./assets/images/icon-thank-you.svg" alt="">
+      <h2>
+        Thank you!
+      </h2>
       <p>
         Thanks for confirming your subscription! We hope you have fun
         using our platform. If you ever need support, please feel free
