--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
 
     <!-- Sidebar end -->
     <main>
+<form action="">
 
-      <div id="app"></div>
-
+  <div id="app"></div>
+  
+</form>
     </main>
     <footer>
       <div class="container-rotas">
