--- a/pages/step1.html
+++ b/pages/step1.html
@@ -9,29 +9,27 @@
       <p>
         Please provide your name, email address, and phone number.
       </p>
-      <form action="#">
+      
         <div class="wrapper-input">
           <label for="name">
             Name
           </label>
-          <input id="name" type="text" placeholder="e.g. Stephen King">
+          <input id="name" name="name" type="text" placeholder="e.g. Stephen King">
         </div>
 
         <div class="wrapper-input">
           <label for="email">
             Email Address
           </label>
-          <input id="email" type="text" placeholder="e.g. stephenking@lorem.com">
+          <input name="email" id="email" type="text" placeholder="e.g. stephenking@lorem.com">
         </div>
 
         <div class="wrapper-input">
           <label for="phone">
             Phone Number
           </label>
-          <input id="phone" type="text" placeholder="e.g. +1 234 567 890">
-        </div>
-
-      </form>
+          <input name="phone" id="phone" type="text" placeholder="e.g. +1 234 567 890">
+        </div>     
     </div>
       
   </div>
