--- a/pages/step4.html
+++ b/pages/step4.html
@@ -1,17 +1,18 @@
- <!-- Step 4 start -->
- <div class="step4">
-    <div class="container-page">
-      <h1>Finishing up</h1>
-      
-      Double-check everything looks OK before confirming.
+<!-- Step 4 start -->
+<div class="step4">
+  <div class="container-page">
+    <h1>Finishing up</h1>
 
-      <!-- Dynamically add subscription and add-on selections here -->
+    Double-check everything looks OK before confirming.
+    <span id="nomeUsuario"></span>
 
-      Total (per month/year)
+    <!-- Dynamically add subscription and add-on selections here -->
+
+    Total (per month/year)
 
 
 
-    </div>
-  
   </div>
-  <!-- Step 4 end -->
+
+</div>
+<!-- Step 4 end -->
