--- a/index.html
+++ b/index.html
@@ -68,42 +68,45 @@
     </header>
 
     <!-- Sidebar end -->
-    <main>
-<form action="">
+    <div class="content">
 
-  <div id="app"></div>
-  
-</form>
-    </main>
-    <footer>
-      <div class="container-rotas">
-        <div class="center">
+      <main>
+        <form action="" method="get">
 
-          <div class="wrapper-rotas">
-            <div class="rota-step-1">
-              <a class="buttonS1" href="/step2" onclick="route()"> Next Step </a>
+          <div id="app"></div>
+
+        </form>
+      </main>
+      <footer>
+        <div class="container-rotas">
+          <div class="center">
+
+            <div class="wrapper-rotas">
+              <div class="rota-step-1">
+                <a class="buttonS1" href="/step2" onclick="route()"> Next Step </a>
+              </div>
+              <div class="rota-step-2 hide">
+                <a class="link" href="/step1" onclick="route()"> Go Back </a>
+                <a class="buttonS2" href="/step3" onclick="route()"> Next Step </a>
+              </div>
+              <div class="rota-step-3 hide">
+                <a class="link" href="/step2" onclick="route()"> Go Back </a>
+                <a type="submit" class="buttonS3" href="/step4" onclick="route()"> Next Step </a>
+              </div>
+              <div class="rota-step-4 hide">
+                <a class="link" href="/step3" onclick="route()"> Go Back </a>
+                <a class="buttonS4" href="/step5" onclick="route()"> Confirm </a>
+              </div>
             </div>
-            <div class="rota-step-2 hide">
-              <a class="link" href="/step1" onclick="route()"> Go Back </a>
-              <a class="buttonS2" href="/step3" onclick="route()"> Next Step </a>
-            </div>
-            <div class="rota-step-3 hide">
-              <a class="link" href="/step2" onclick="route()"> Go Back </a>
-              <a class="buttonS3" href="/step4" onclick="route()"> Next Step </a>
-          </div>
-          <div class="rota-step-4 hide">
-            <a class="link" href="/step3" onclick="route()"> Go Back </a>
-            <a class="buttonS4" href="/step5" onclick="route()"> Confirm </a>
           </div>
         </div>
-      </div>
-    </div>
 
-      <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="https://github.com/rosendo2015/formulario4etapas">Francisco Rosendo</a>.
-      </div>
-    </footer>
+        <div class="attribution">
+          Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+          Coded by <a href="https://github.com/rosendo2015/formulario4etapas">Francisco Rosendo</a>.
+        </div>
+      </footer>
+    </div>
   </div>
 </body>
 
