routes pegando valores com localstorage

--- a/pages/step1.html
+++ b/pages/step1.html
@@ -11,23 +11,17 @@
       </p>
       
         <div class="wrapper-input">
-          <label for="name">
-            Name
-          </label>
-          <input id="name" name="name" type="text" placeholder="e.g. Stephen King">
+          <label for="nome">Name</label>
+          <input id="nome" name="nome" type="text" placeholder="e.g. Stephen King">
         </div>
 
         <div class="wrapper-input">
-          <label for="email">
-            Email Address
-          </label>
+          <label for="email">Email Address</label>
           <input name="email" id="email" type="text" placeholder="e.g. stephenking@lorem.com">
         </div>
 
         <div class="wrapper-input">
-          <label for="phone">
-            Phone Number
-          </label>
+          <label for="phone">Phone Number</label>
           <input name="phone" id="phone" type="text" placeholder="e.g. +1 234 567 890">
         </div>     
     </div>
