--- a/pages/step4.html
+++ b/pages/step4.html
@@ -1,18 +1,29 @@
 <!-- Step 4 start -->
-<div class="step4">
-  <div class="container-page">
-    <h1>Finishing up</h1>
-
-    Double-check everything looks OK before confirming.
-    <span id="nomeUsuario"></span>
-
-    <!-- Dynamically add subscription and add-on selections here -->
-
-    Total (per month/year)
-
-
-
+  
+  <div class="step4" onload="mostraDados()">
+   
+    <div class="container-page">
+      <h1>Finishing up</h1>
+      
+      Double-check everything looks OK before confirming.
+      <br>
+      <br>    
+      <label for="">Nome: </label>
+      <div id="minhadiv1"></div>
+      <br> 
+      <br>     
+      <label for="">Email: </label>
+      <span id="minhadiv2"></span>
+      <br>
+      <br>    
+      <label for="">Fone: </label>
+      <span id="minhadiv3"></span>
+      <br>
+      <br>    
+      Total (per month/year)
+    </div>
+    
   </div>
 
-</div>
+
 <!-- Step 4 end -->
