--- a/index.html
+++ b/index.html
@@ -71,16 +71,13 @@
     <div class="content">
 
       <main>
-        <form action="" method="get">
-
+        <form>
           <div id="app"></div>
-
         </form>
       </main>
       <footer>
         <div class="container-rotas">
           <div class="center">
-
             <div class="wrapper-rotas">
               <div class="rota-step-1">
                 <a class="buttonS1" href="/step2" onclick="route()"> Next Step </a>
@@ -100,7 +97,6 @@
             </div>
           </div>
         </div>
-
         <div class="attribution">
           Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
           Coded by <a href="https://github.com/rosendo2015/formulario4etapas">Francisco Rosendo</a>.
@@ -108,6 +104,7 @@
       </footer>
     </div>
   </div>
+  <script src="./js/elements.js"></script>
 </body>
 
 </html>
